--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "Serverless webpack example using Typescript",
   "main": "handler.js",
   "scripts": {
+    "deploy": "serverless deploy",
+    "remove": "serverless remove",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "aws-sdk": "^2.413.0"
   },
   "devDependencies": {
