--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@types/request-promise": "^4.1.42",
     "aws-sdk": "^2.413.0",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4"
+    "request-promise": "^4.2.4",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/aws-lambda": "8.10.1",
