--- a/serverless.yml
+++ b/serverless.yml
@@ -11,18 +11,14 @@ provider:
   environment:
     PAGE_DYNAMODB_TABLE: ${self:service}-${self:provider.stage}-page
     URL_DYNAMODB_TABLE: ${self:service}-${self:provider.stage}-url
-    SLOT_KINESIS_STREAM_NAME: "${self:service.name}-${self:provider.stage}-slot"
-    SLOT_KINESIS_STREAM_PARTITION_KEY: "${self:service.name}-${self:provider.stage}-slot-partition"
+    SLOT_QUEUE_NAME: "${self:service.name}-${self:provider.stage}-slot"
   iamRoleStatements:
-    - Effect: Allow
+    - Effect: "Allow"
       Action:
-        - "kinesis:GetRecords"
-        - "kinesis:GetShardIterator"
-        - "kinesis:DescribeStream"
-        - "kinesis:ListStreams"
-        - "kinesis:PutRecord"
-        - "kinesis:PutRecords"
-      Resource: "arn:aws:kinesis:${self:provider.region}:*:stream/*"
+        - "sqs:SendMessage"
+        - "sqs:GetQueueUrl"
+        - "sqs:ListQueues"
+      Resource: "arn:aws:sqs:${self:provider.region}:*:*"
     - Effect: "Allow"
       Action: # Gives permission to DynamoDB tables in a specific region
         - dynamodb:DescribeTable
@@ -36,6 +32,10 @@ provider:
 
 resources:
   Resources:
+    SlotQueue:
+      Type: "AWS::SQS::Queue"
+      Properties:
+        QueueName: ${self:provider.environment.SLOT_QUEUE_NAME}
     SlotKinesisStream:
       Type: "AWS::Kinesis::Stream"
       DeletionPolicy: Retain
@@ -92,12 +92,10 @@ functions:
   crawl:
     handler: handler.crawl
     events:
-      - stream:
-          type: kinesis
+      - sqs:
           arn:
             Fn::GetAtt:
-              - SlotKinesisStream
+              - SlotQueue
               - Arn
-          batchSize: 1
-          startingPosition: LATEST
-          enabled: true
+          # batchSize: 1
+          # enabled: true
